<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tvTittle"
    android:text="@string/tvTittle"
    android:textSize="40sp"
    android:textColor="@color/black"
    android:fontFamily="sans-serif-black"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"  />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvName"
        android:text="@string/tvName"
        android:textSize="40sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTittle"
        app:layout_constraintBottom_toTopOf="@id/etName"/>
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etName"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSet"
        android:hint="@string/btnSet"
        android:textSize="20sp"
        android:textColorHint="@color/white"
        android:paddingHorizontal="40dp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintVertical_bias="100"
        app:layout_constraintBottom_toBottomOf="parent"  />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCancel"
        android:hint="@string/btnCancel"
        android:textSize="20sp"
        android:textColorHint="@color/white"
        android:paddingHorizontal="40dp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toStartOf="@id/btnSet"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintVertical_bias="100"
        app:layout_constraintBottom_toBottomOf="parent"  />
</androidx.constraintlayout.widget.ConstraintLayout>