<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAlert"
        android:padding="20dp"
        android:id="@+id/tvAlert"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/btnToast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:hint="@string/btnToast"
        android:textColorHint="@color/white"
        android:layout_marginVertical="40dp"
        android:id="@+id/btnToast"
        app:layout_constraintBottom_toTopOf="@id/btnSnackbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlert" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:hint="@string/btnSnackbar"
        android:textColorHint="@color/white"
        android:id="@+id/btnSnackbar"
        android:layout_marginVertical="40dp"
        app:layout_constraintBottom_toTopOf="@id/btnalertDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnToast" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginVertical="70dp"
        android:hint="@string/btnDialog"
        android:textColorHint="@color/white"
        android:id="@+id/btnalertDialog"
        app:layout_constraintBottom_toTopOf="@id/btnCoustomDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSnackbar" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginVertical="80dp"
        android:hint="@string/btnCoustomDialog"
        android:textColorHint="@color/white"
        android:id="@+id/btnCoustomDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnalertDialog" />

</androidx.constraintlayout.widget.ConstraintLayout>